Ændret navnet fra Konsultation.html til Patients.html Tilføjet RegistreredeKonsultationer.html og NyKonsultation.html Ændret i password visiability på index.html siden

--- a/src/main/Webapp/HomePage.html
+++ b/src/main/Webapp/HomePage.html
@@ -21,48 +21,45 @@
             background-color: dodgerblue;
             border: 4px solid white; /* Green */
         }
-
-
     </style>
-
 </head>
+
 <body>
-
-    <div class="banner">
-        <div class="Container">
-
-            <nav>
-                <div class=“logo”>
-                    <img src="logo.jpg" alt="" height="70px">
-                </div>
-
-                <ul>
-                    <li><a href="#">Bruger: XXX YYYY</a></li>
-                    <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
-                    <li><a href="#">Log ud</a></li>
-                </ul>
-
-            </nav>
-
-            <div class="main">
-                <img src="Kalender2.png" alt="" width="975px" >
-
+<div class="banner">
+    <div class="Container">
+        <nav>
+            <div class=“logo”>
+                <img src="logo.jpg" alt="" height="70px">
             </div>
-
-
-            <div class="sidebar">
-
-                <button class="button button1"> Opret konsultation</button>
-                <button class="button button2"> Registrer patient </button>
-                <button class="button button3"> Hent konsultation</button>
-                <button class="button button4"> Spændende knap</button>
-                <button class="button button5"> Spændende knap</button>
-                <button class="button button6"> Spændende knap</button>
-            </div>
-            <footer>Footer</footer>
-
+            <ul>
+                <li><a href="#">Bruger: XXX YYYY</a></li>
+                <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
+                <li><a href="#">Log ud</a></li>
+            </ul>
+        </nav>
+        <div class="main">
+            <img src="Kalender2.png" alt="" width="975px" >
         </div>
+        <div class="sidebar">
+            <form action="NyKonsultation.html">
+            <button class="button button1"> Opret konsultation</button>
+            </form>
+            <form action="Patients.html">
+            <button class="button button2"> Registrer patient </button>
+            </form>
+            <form action="RegistreredeKonsultationer.html">
+            <button class="button button3"> Hent konsultation</button>
+            </form>
+            <button class="button button4"> Spændende knap</button>
+            <button class="button button5"> Spændende knap</button>
+            <button class="button button6"> Spændende knap</button>
+        </div>
+        <footer>Footer</footer>
     </div>
+</div>
+
+
+
 
 </body>
 </html>
