--- a/src/main/Webapp/Patients.html
+++ b/src/main/Webapp/Patients.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Konsultationer</title>
+    <title>Patients</title>
 </head>
 
 <body>
+<div class="banner">
+    <div class="login_div">
+        <h1> Patients</h1>
+        <div class ="logo">
+            <img src="logo.jpg" alt="" height="100px">
+        </div>
+
 <script>
     let list = []; //opretter en variabel list, som peger på et array
     //en metode der tilføjer en patient til listen med navn + cpr
