--- a/src/main/Webapp/HomePage.html
+++ b/src/main/Webapp/HomePage.html
@@ -45,7 +45,7 @@
             <button class="button button1"> Opret konsultation</button>
             </form>
             <form action="Patients.html">
-            <button class="button button2"> Registrer patient </button>
+            <button class="button button2"> Registrer patient</button>
             </form>
             <form action="RegistreredeKonsultationer.html">
             <button class="button button3"> Hent konsultation</button>
@@ -54,7 +54,7 @@
             <button class="button button5"> Spændende knap</button>
             <button class="button button6"> Spændende knap</button>
         </div>
-        <footer>Footer</footer>
+        <footer>RegionH</footer>
     </div>
 </div>
 
