--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -39,6 +39,7 @@
     </div>
 </div>
 
+//metode der gør det muligt at vise/skjule password
 <script>
     function passwordFunction() {
         var x = document.getElementById("passwordID");
