--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -27,7 +27,7 @@
         <img src="logo.jpg" alt="" height="100px">
         </div>
             <div class="form">
-                <form action="HomePage.html" method="post">
+                <form action="api" method="post">
                    <label for="username"> Brugernavn:</label><br>
                    <input type="text" id="username" name="username" required><br>
                    <label for="passwordID"> Kodeord:</label><br>
