Login funktion skrevet i front-end dog udkommenteret og en lille ændring i index.html og Style.css

--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -32,17 +32,18 @@
                    <input type="text" id="username" name="username" required><br>
                    <label for="passwordID"> Kodeord:</label><br>
                    <input type="password" id="passwordID" name="password" required><br><br>
-                    <input type="checkbox" onclick="passwordFunction()">Vis kodeord<br><br>
-                    <div> Glemt Brugernavn/kodeord</div>
+                    <div class="forgot"> Glemt Brugernavn/kodeord </div>
+                    <input type="checkbox" onclick="passwordFunction()">Vis kodeord
+
                     <input type="submit" value="Login" >
                  </form>
             </div>
     </div>
 </div>
 
-//metode der gør det muligt at vise/skjule password
-<script>
 
+<script>
+    //tidligere login funktion
     /*function loginFuc(){
             var user = document.getElementById("username").value;
             var pass = document.getElementById("passwordID").value;
@@ -56,6 +57,7 @@
             }
     }*/
 
+    //metode der gør det muligt at vise/skjule password
     function passwordFunction() {
         var x = document.getElementById("passwordID");
         if (x.type === "password") {
