--- a/src/main/Webapp/index.html
+++ b/src/main/Webapp/index.html
@@ -56,6 +56,7 @@
                 return false;
             }
     }*/
+    //hej
 
     //metode der gør det muligt at vise/skjule password
     function passwordFunction() {
