--- a/src/main/Webapp/NyKonsultation.html
+++ b/src/main/Webapp/NyKonsultation.html
@@ -1,15 +1,69 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NyKonsultation</title>
+    <title>Ny konsultation</title>
 </head>
+
 <body>
 <div class="banner">
     <div class="login_div">
-        <h1> Nye konsultationer</h1>
+        <h1>Ny konsultation</h1>
         <div class ="logo">
             <img src="logo.jpg" alt="" height="100px">
         </div>
+
+        <script>
+            let list = []; //opretter en variabel list, som peger på et array
+            //en metode der tilføjer en patient til listen med navn + cpr
+            function doAdd(){
+                let nyKonsultation = {}; //opretter en variabel patient, som peger på et objekt
+                //tilføjer attributter til objektet og tildeler dem værdier fra input-felterne
+                nyKonsultation.navn = document.getElementById("patientnavn").value;
+                nyKonsultation.cpr = document.getElementById("cprnummer").value;
+                nyKonsultation.dato = document.getElementById("datonummer").value;
+                nyKonsultation.tid = document.getElementById("klokkeslet").value;
+                list.push(nyKonsultation); //lægger værdierne over i objektet nyKonsultation
+                document.getElementById("list").innerText = JSON.stringify(list); //data gemmes i JSON filformat
+            }
+            //en metode til at finde en patient i listen
+            function doFind(){
+                //opretter en variabel og tildeler den værdien fra inputfelt 3
+                const target = document.getElementById("registreret_cpr").value; //target værdien ændres ikke, derfor en const variabel
+                let found = null; //found værdien ændres, derfor en let variabel
+                //laver en forløkke, der søger efter værdien tastet i inputfelt 3 i alle elementerne i array'et
+                for (var i = 0; i < list.length; i++){
+                    if ( list[i].cpr === target ) {
+                        found = list[i];
+                    }
+                }
+                if ( found != null ) {
+                    document.getElementById("found").innerText = JSON.stringify(found); //hvis patienten findes udskrives denne i JSON format
+                } else {
+                    document.getElementById("found").innerText = "Not found!" //hvis patienten ikke findes, udskrives "Not found!"
+                }
+            }
+        </script>
+
+        <label for="patientnavn">Indtast navn:</label>
+        <input type="text" id="patientnavn" name="patientnavn" required><br>
+        <label for="cprnummer">Indtast CPR:</label>
+        <input type="text" id="cprnummer" name="cprnummer" required><br>
+        <label for="datonummer">Indtast dato:</label>
+        <input type="text" id="datonummer" name="datonummer" required><br>
+        <label for="klokkeslet">Indtast tidspunkt:</label>
+        <input type="text" id="klokkeslet" name="klokkeslet" required><br>
+
+        <button onclick="doAdd()">Tilføj ny konsultation</button>
+        <div>Resultat</div>
+        <div id="list"></div>
+        <br/>
+        <label for="registreret_cpr">hent konsultation med CPR:</label><br>
+        <input type="text" id="registreret_cpr" name="registreret_cpr" required><br>
+        <button onclick="doFind()">hent konsultation i systemet</button>
+        <div id="found"></div>
+
 </body>
+
 </html>
