--- a/src/main/Webapp/NyKonsultation.html
+++ b/src/main/Webapp/NyKonsultation.html
@@ -64,6 +64,10 @@
         <button onclick="doFind()">hent konsultation i systemet</button>
         <div id="found"></div>
 
+    </div>
+
+</div>
+
 </body>
 
 </html>
