--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="#">Bruger: XXX YYYY</a></li>
                 <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
-                <li><a href="#">Log ud</a></li>
+                <li><a href="#">Log ud</a> <form action="index.html"> </li>
             </ul>
         </nav>
 
