--- a/src/main/Webapp/NyKonsultation.html
+++ b/src/main/Webapp/NyKonsultation.html
@@ -4,15 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Ny konsultation</title>
+    <link rel="stylesheet"  href="HPStyle.css">
+    <style>
+        h1 {text-align: center;}
+    </style>
+
 </head>
 
 <body>
 <div class="banner">
-    <div class="login_div">
+        <div class="Container">
+            <nav>
+                <div class=“logo”>
+                    <img src="logo.jpg" alt="" height="70px">
+                </div>
+                <ul>
+                    <li><a href="#">Bruger: XXX YYYY</a></li>
+                    <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
+                    <li><a href="index.html" >Log ud</a>  </li>
+                </ul>
+
+            </nav>
+
+<div class="main">
+
         <h1>Ny konsultation</h1>
-        <div class ="logo">
-            <img src="logo.jpg" alt="" height="100px">
-        </div>
 
         <script>
             let list = []; //opretter en variabel list, som peger på et array
