--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -41,6 +41,7 @@
         </nav>
 
         <div class="main">
+            <h1>Homepage</h1>
             <form action="NyKonsultation.html">
                 <button class="button button1"> Opret konsultation</button>
 
