Merget med Julianes, skal nok stadig finpudses mm.

--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -35,22 +35,24 @@
             <ul>
                 <li><a href="#">Bruger: XXX YYYY</a></li>
                 <li><a href="#">Tid: 12:00 Dato: 01-01-2022</a></li>
-                <li><a href="index.html" >Log ud</a>  </li>
+                <li><a href="index.html">Log ud</a> </li>
             </ul>
-
         </nav>
 
         <div class="main">
             <h1>Homepage</h1>
             <form action="NyKonsultation.html">
-                <button class="button button1" > Opret konsultation </button>
-
-            <form action="RegistreredeKonsultationer.html">
-                <button class="button button3"> Hent konsultation</button>
-
-            <form action="EksterneSystem.html">
-                <button class="button button3"> Hent ekstern journal</button>
+                <button class="button button1"> Opret konsultation</button>
             </form>
+
+
+                <form action="RegistreredeKonsultationer.html">
+                    <button class="button button3"> Hent konsultation</button>
+                </form>
+
+                    <form action="EksterneSystem.html">
+                        <button class="button button3"> Hent ekstern journal</button>
+                    </form>
         </div>
 
 
