--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -41,18 +41,20 @@
 
         <div class="main">
             <h1>Homepage</h1>
-            <form action="NyKonsultation.html">
-                <button class="button button1"> Opret konsultation</button>
-            </form>
+            <div class="maindiv">
+                <a href="NyKonsultation.html">
+                    <button class="button button1"> Opret konsultation</button>
+                </a>
 
+                <a href="RegistreredeKonsultationer.html">
+                    <button class="button button2"> Hent konsultation</button>
+                </a>
 
-                <form action="RegistreredeKonsultationer.html">
-                    <button class="button button3"> Hent konsultation</button>
-                </form>
+                <a href="EksterneSystem.html">
+                    <button class="button button3"> Hent ekstern journal</button>
+                </a>
 
-                    <form action="EksterneSystem.html">
-                        <button class="button button3"> Hent ekstern journal</button>
-                    </form>
+            </div>
         </div>
 
 
