--- a/src/main/Webapp/NyKonsultation.html
+++ b/src/main/Webapp/NyKonsultation.html
@@ -58,8 +58,8 @@
                     }
                 }
             </script>
+            <div class="maindiv">
 
-            <div class="OpretKonsultation">
                 <form>
                     <label for="cprnummer">Indtast CPR:</label>
                     <input type="text" id="cprnummer" name="cprnummer" required><br>
