--- a/src/main/Webapp/RegistreredeKonsultationer.html
+++ b/src/main/Webapp/RegistreredeKonsultationer.html
@@ -39,13 +39,13 @@
         </nav>
         <div class="main">
             <h1>Hent Konsultation</h1>
-            <div class="form">
+            <div class="maindiv">
                 <form>
                     <label for="CPR">Indtast CPR-nummer:</label><br>
                     <input type="text" id="CPR" name="CPR" required><br>
                     <label for="dato">Indtast Dato for Konsultation</label><br>
                     <input type="text" id="dato" name="dato"><br>
-                    <input type="button" onclick="" value="Hent konsultation">
+                    <button class="button hentkonsultation">Hent Konsultation</button>
                 </form>
             </div>
         </div>
