Har tilføjet en HTML fil til at hente eksterne data fra

--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -50,7 +50,7 @@
                     <button class="button button2"> Hent konsultation</button>
                 </a>
 
-                <a href="EksterneSystem.html">
+                <a href="EksternSystem.html">
                     <button class="button button3"> Hent ekstern journal</button>
                 </a>
 
