--- a/src/main/Webapp/RegistreredeKonsultationer.html
+++ b/src/main/Webapp/RegistreredeKonsultationer.html
@@ -51,7 +51,10 @@
 
         </div>
 
-        <footer>RegionH</footer>
+        <footer>
+            <button onclick="history.back()" class="button" >Go Back</button>
+            RegionH
+        </footer>
     </div>
 
 </div>
