back button i ekstern system filen

--- a/src/main/Webapp/EksternSystem.html
+++ b/src/main/Webapp/EksternSystem.html
@@ -43,7 +43,9 @@
 
         </div>
 
-        <footer>RegionH</footer>
+        <footer>
+            <button onclick="history.back()" class="button" >Go Back</button>
+            RegionH</footer>
     </div>
 
 </div>
