ny knap i opret konsultation

--- a/src/main/Webapp/NyKonsultation.html
+++ b/src/main/Webapp/NyKonsultation.html
@@ -100,7 +100,12 @@
                     <br>
                 </form>
                 <div/>
-                <button onclick="doAdd()" class="button">Tilføj ny konsultation</button>
+                <button onclick="doAdd()" class="button">Tilføj ny konsultation </button>
+
+                    <a href="KonsultationsHistorik.html">
+                        <button class="button">gå til konsultationshistorik </button>
+                    </a>
+
                 <div>Resultat</div>
                 <div id="list"></div>
                 <br/>
@@ -109,7 +114,6 @@
                     <button onclick="doFind()">Find patient</button>
                     Fandt:
                     <div id="found"></div>
-
 
 
             </div>
