--- a/src/main/Webapp/NewHomePage.html
+++ b/src/main/Webapp/NewHomePage.html
@@ -42,11 +42,11 @@
         <div class="main">
             <h1>Homepage</h1>
             <div class="maindiv">
-                <a href="NyKonsultation.html">
+                <a href="OpretKonsultation.html">
                     <button class="button button1"> Opret konsultation</button>
                 </a>
 
-                <a href="RegistreredeKonsultationer.html">
+                <a href="HentKonsultationer.html">
                     <button class="button button2"> Hent konsultation</button>
                 </a>
 
