--- a/src/main/Webapp/OpretKonsultation.html
+++ b/src/main/Webapp/OpretKonsultation.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ny konsultation</title>
+    <title>Opret konsultation</title>
     <link rel="stylesheet"  href="HPStyle.css">
 
 </head>
