--- a/src/main/Webapp/OpretKonsultation.html
+++ b/src/main/Webapp/OpretKonsultation.html
@@ -64,7 +64,7 @@
 
             <div class="main">
 
-                <form class="form" action="register" method="get">
+                <form action="register" method="get">
                     <div class = "paddingdiv">
                         <label for="cprnummer">Indtast CPR:</label>
                         <input type="text" id="cprnummer" name="cprnummer" required><br>
@@ -78,7 +78,7 @@
                         <input type="text" id="klokkeslet" name="klokkeslet" required><br>
                     </div>
 
-                    <!-- Alternativ hvis vi skal samle det til en date-time variabel
+<!--                    Alternativ hvis vi skal samle det til en date-time variabel&ndash;&gt;
                     <div class="paddingdiv">
                         <label for="meeting-time">Vælg tidspunkt for konsultation</label><br>
                         <input type="datetime-local" id="meeting-time" name="meeting-time"
