--- a/src/main/Webapp/OpretKonsultation.html
+++ b/src/main/Webapp/OpretKonsultation.html
@@ -123,14 +123,14 @@
                 </form>
 
 
-                <div>Resultat</div>
+               <!-- <div>Resultat</div>
                 <div id="list"></div>
                 <br/>
                     <br>
                     <input type="text" id="registreret_cpr">
                     <button onclick="doFind()">Find patient</button>
                     Fandt:
-                    <div id="found"></div>
+                    <div id="found"></div>-->
 
 
             </div>
