--- a/src/main/Webapp/konsultationsHistorik.html
+++ b/src/main/Webapp/konsultationsHistorik.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>KonsultationsHistorik</title>
@@ -41,13 +42,8 @@
 
         <div class="main">
             <h1>Konsultationshistorik</h1>
-            <div class="maindiv">
-
-            </div>
-
-
+            <div class="maindiv"></div>
         </div>
-
 
         <footer>
             <button onclick="history.back()" class="button" >Go Back</button>
