--- a/src/main/Webapp/EksternSystem.html
+++ b/src/main/Webapp/EksternSystem.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>EksternSystem</title>
     <link rel="stylesheet"  href="HPStyle.css">
 </head>
+
 <body>
 <style>
     .button {
@@ -36,18 +38,19 @@
                 <li><a href="#">Log ud</a></li>
             </ul>
         </nav>
+
         <div class="main">
             <h1>Hent data fra eksternt system </h1>
-            <div class="maindiv">
-            </div>
-
+            <div class="maindiv"></div>
         </div>
 
         <footer>
             <button onclick="history.back()" class="button" >Go Back</button>
-            RegionH</footer>
-    </div>
+            RegionH
+        </footer>
 
+    </div>
 </div>
+
 </body>
 </html>
